force-app/main/default/objects/refedge__Community_Invite_Attribute__c/fields/refedge__Attribute__c.field-meta.xml
<CustomField>
    <fullName>refedge__Attribute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attribute</label>
    <referenceTo>refedge__Attribute__c</referenceTo>
    <relationshipLabel>Community Invite Attributes</relationshipLabel>
    <relationshipName>Community_Invite_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>