force-app/main/default/objects/refedge__Community_Invite_Attribute__c/fields/refedge__Community_Invite__c.field-meta.xml
<CustomField>
    <fullName>refedge__Community_Invite__c</fullName>
    <label>Community Invite</label>
    <referenceTo>refedge__Community_Invite__c</referenceTo>
    <relationshipLabel>Community Invite Attributes</relationshipLabel>
    <relationshipName>Community_Invite_Attributes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>